[tool.poetry]
name = "pancakeswap-lottery"
version = "2.0.1"
description = "A Python client for accessing PancakeSwap Lottery smart contract information through Web3.py"
repository = "https://github.com/frefrik/pancakeswap-lottery"
readme = "README.md"
keywords = ["pancakeswap", "cake", "lottery", "bsc", "web3"]
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
packages = [
    { include = "pancakeswap_lottery" },
]
include = ["pancakeswap_lottery/assets/*.abi"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
web3 = "^6.18.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mkdocs-material = "^9.5.22"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
